--- a/ShipBobApp/DemoApp.csproj
+++ b/ShipBobApp/DemoApp.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="2.0.1" />
+    <PackageReference Include="MSBuild.Grunt" Version="0.5.1" />
   </ItemGroup>
 
   <ItemGroup>
